samples/ocp-samples/nginx-ocp-pv.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    name: frontend
  template:
    metadata:
      labels:
        name: frontend
      annotations:
        backup.velero.io/backup-volumes: volume-frontend
    spec:
      volumes:
      - name: volume-frontend
        persistentVolumeClaim:
          claimName: pvc-frontend
      containers:
        - name: helloworld
          image: nginx:latest
          ports:
          - containerPort: 80
          volumeMounts:
            - mountPath: "/root/data"
              name: volume-frontend
---
apiVersion: v1
kind: Service
metadata:
  name: frontend  
spec:
  selector:                  
    name: frontend
  type: ClusterIP
  ports:
  - port: 80     
    protocol: TCP
    targetPort: 80
