samples/ocp-samples/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: frontend
spec:
  port:
    targetPort: 80
  to:
    kind: ""
    name: frontend
    weight: null
status: {}
